--- a/UE5_03/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/UE5_03/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -76,10 +76,10 @@ LaunchConfiguration=LaunchConfig_Default
 PackFilesForLaunch=NoPak
 bAutoCompileBlueprintsOnLaunch=True
 bLaunchSeparateServer=False
-PlayNetMode=PIE_ListenServer
+PlayNetMode=PIE_Standalone
 RunUnderOneProcess=True
 PlayNetDedicated=False
-PlayNumberOfClients=1
+PlayNumberOfClients=2
 ServerPort=17777
 ClientWindowWidth=640
 AutoConnectToServer=True
@@ -102,7 +102,7 @@ LastExecutedPIEPreviewDevice=
 DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
 MultipleInstancePositions=(X=320,Y=160)
-MultipleInstancePositions=(X=0,Y=0)
+MultipleInstancePositions=(X=-908,Y=0)
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
 FlightCameraControlExperimentalNavigation=False
@@ -735,7 +735,7 @@ AnimGraphNode_BlendSpacePlayer.Settings=True
 PropertyWrapper.Variable=True
 PropertyWrapper.DefaultValueCategory=True
 K2Node_VariableGet.Variable=True
-K2Node_VariableGet.DefaultValueCategory=True
+K2Node_VariableGet.DefaultValueCategory=False
 K2Node_VariableSet.Variable=True
 K2Node_VariableSet.DefaultValueCategory=True
 BP_SHooter_Gamemose_C.Tick=True
@@ -918,14 +918,67 @@ VerticalBox.Navigation=True
 VerticalBox.Localization=True
 K2Node_MakeStruct.PinOptions=True
 K2Node_BreakStruct.PinOptions=True
+CanvasPanel.Behavior=True
+CanvasPanel.Accessibility=True
+CanvasPanel.Render Transform=True
+CanvasPanel.Performance=True
+CanvasPanel.Clipping=True
+CanvasPanel.Navigation=True
+CanvasPanel.Localization=True
+WB_MpMenu_C.Default=True
+WB_MpMenu_C.Appearance=True
+WB_MpMenu_C.Designer=True
+WB_MpMenu_C.Input=True
+WB_MpMenu_C.Interaction=True
+WB_MpMenu_C.Performance=True
+WB_MpMenu_C.Layout=True
+WB_MpMenu_C.Behavior=True
+WB_MpMenu_C.Render Transform=True
+WB_MpMenu_C.Localization=True
+WB_MpMenu_C.Accessibility=True
+WB_MpMenu_C.Clipping=True
+WB_MpMenu_C.Navigation=True
+WB_MainMenu_C.Default=True
+ScrollBox.Layout=True
+ScrollBox.Style=True
+ScrollBox.Scroll=True
+ScrollBox.Accessibility=True
+ScrollBox.Behavior=True
+ScrollBox.Render Transform=True
+ScrollBox.Performance=True
+ScrollBox.Clipping=True
+ScrollBox.Navigation=True
+ScrollBox.Localization=True
+ScrollBox.Events=True
+HorizontalBox.Layout=True
+HorizontalBox.Behavior=True
+HorizontalBox.Accessibility=True
+HorizontalBox.Render Transform=True
+HorizontalBox.Performance=True
+HorizontalBox.Clipping=True
+HorizontalBox.Navigation=True
+HorizontalBox.Localization=True
+WB_ServerRow_C.Appearance=True
+WB_ServerRow_C.Designer=True
+WB_ServerRow_C.Input=True
+WB_ServerRow_C.Interaction=True
+WB_ServerRow_C.Performance=True
+WB_ServerRow_C.Layout=True
+WB_ServerRow_C.Behavior=True
+WB_ServerRow_C.Render Transform=True
+WB_ServerRow_C.Localization=True
+WB_ServerRow_C.Accessibility=True
+WB_ServerRow_C.Clipping=True
+WB_ServerRow_C.Navigation=True
+K2Node_FormatText.Arguments=True
+WB_ServerRow_C.Default=True
 
 [AssetEditorSubsystem]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/Widgets/WB_MainMenu.WB_MainMenu
 OpenAssetsAtExit=/Game/Framework/BP_SHooter_Gameinstance.BP_SHooter_Gameinstance
-OpenAssetsAtExit=/Game/Framework/BP_Shooter_PlayerController.BP_Shooter_PlayerController
-OpenAssetsAtExit=/Game/SavedData/S_PlayerProfile.S_PlayerProfile
-OpenAssetsAtExit=/Game/SavedData/SG_PlayerProfile.SG_PlayerProfile
+OpenAssetsAtExit=/Game/Widgets/WB_MpMenu.WB_MpMenu
+OpenAssetsAtExit=/Game/Widgets/WB_MainMenu.WB_MainMenu
+OpenAssetsAtExit=/Game/Widgets/WB_ServerRow.WB_ServerRow
 
 [ContentBrowser]
 ContentBrowserDrawer.SourcesExpanded=True
@@ -943,9 +996,9 @@ ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
 ContentBrowserDrawer.ActiveTypeFilters=
 ContentBrowserDrawer.EnabledTypeFilters=
-ContentBrowserDrawer.ActiveFrontendFilters=
+ContentBrowserDrawer.ActiveFrontendFilters=ShowRedirectors
 ContentBrowserDrawer.EnabledFrontendFilters=
-ContentBrowserDrawer.SelectedPaths=/Game/Framework
+ContentBrowserDrawer.SelectedPaths=/Game/Maps/Menu
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -989,25 +1042,26 @@ ToolbarOpenBPClass.ThumbnailSize=2
 ToolbarOpenBPClass.CurrentViewType=0
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Widgets/WB_MainMenu
-MRUItem1=/Game/Framework/BP_SHooter_Gameinstance
-MRUItem2=/Game/Framework/BP_Shooter_PlayerController
-MRUItem3=/Game/SavedData/SG_PlayerProfile
-MRUItem4=/Game/SavedData/S_PlayerProfile
-MRUItem5=/Game/Framework/BP_SHooter_Gamemose
-MRUItem6=/Game/Maps/Menu/MainMenu_Map
-MRUItem7=/Game/Framework/BP_ShooterMenuPawn
-MRUItem8=/Game/Framework/BP_ShooterMenuController
-MRUItem9=/Game/Framework/BP_ShooterMenu_GameMode
-MRUItem10=/Game/Weapons/Pistol/Mesh/SK_Pistol
-MRUItem11=/Game/Characters/BS_Movement_Quinn
-MRUItem12=/Game/Characters/Heroes/Mannequin/Animations/ABP_Mannequin_Base
-MRUItem13=/Game/Characters/ABP_Hero_Quinn
-MRUItem14=/Game/Characters/BP_Hero_Quinn
-MRUItem15=/Game/Characters/Heroes/Mannequin/Animations/AimOffsets/AO_MF_Pistol_Idle_ADS
-MRUItem16=/Game/Maps/Map_01
-MRUItem17=/Game/Characters/Heroes/Mannequin/Animations/AimOffsets/AO_MM_Unarmed_Idle_Ready
-MRUItem18=/Game/Characters/Heroes/Mannequin/Meshes/SKM_Manny
+MRUItem0=/Game/Maps/Menu/MainMenu_Map
+MRUItem1=/Game/Maps/Menu/LobbyMenu_Map
+MRUItem2=/Game/Widgets/WB_ServerRow
+MRUItem3=/Game/Widgets/WB_MainMenu
+MRUItem4=/Game/Widgets/WB_MpMenu
+MRUItem5=/Game/Framework/BP_SHooter_Gameinstance
+MRUItem6=/Game/Framework/BP_Shooter_PlayerController
+MRUItem7=/Game/SavedData/SG_PlayerProfile
+MRUItem8=/Game/SavedData/S_PlayerProfile
+MRUItem9=/Game/Framework/BP_SHooter_Gamemose
+MRUItem10=/Game/Framework/BP_ShooterMenuPawn
+MRUItem11=/Game/Framework/BP_ShooterMenuController
+MRUItem12=/Game/Framework/BP_ShooterMenu_GameMode
+MRUItem13=/Game/Weapons/Pistol/Mesh/SK_Pistol
+MRUItem14=/Game/Characters/BS_Movement_Quinn
+MRUItem15=/Game/Characters/Heroes/Mannequin/Animations/ABP_Mannequin_Base
+MRUItem16=/Game/Characters/ABP_Hero_Quinn
+MRUItem17=/Game/Characters/BP_Hero_Quinn
+MRUItem18=/Game/Characters/Heroes/Mannequin/Animations/AimOffsets/AO_MF_Pistol_Idle_ADS
+MRUItem19=/Game/Maps/Map_01
 
 [DetailPropertyExpansion]
 PreviewMeshCollection="\"Object.SkeletalMeshes\" "
@@ -1047,6 +1101,8 @@ EditableText="\"Object.Appearance.WidgetStyle.ColorAndOpacity\" "
 /Game/Framework/BP_Shooter_PlayerController.BP_Shooter_PlayerController=0
 /Game/SavedData/S_PlayerProfile.S_PlayerProfile=0
 /Game/SavedData/SG_PlayerProfile.SG_PlayerProfile=0
+/Game/Widgets/WB_ServerRow.WB_ServerRow=0
+/Game/Widgets/WB_MpMenu.WB_MpMenu=0
 
 [/Script/PinnedCommandList.PinnedCommandListSettings]
 Contexts=(Name="AnimationEditor",Commands=)
@@ -1182,8 +1238,8 @@ bShowBookmarksForCurrentDocumentOnlyInTab=False
 GraphEditorQuickJumps=()
 
 [RootWindow]
-ScreenPosition=X=-1361.000 Y=35.000
-WindowSize=X=1280.000 Y=720.000
+ScreenPosition=X=-1899.000 Y=0.000
+WindowSize=X=985.000 Y=1021.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
