--- a/UE5_03/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/UE5_03/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -250,7 +250,7 @@ WmfMediaSettings=InputSettings.Bindings.AxisMappings.NewAxisMapping_0,InputSetti
 BlendSpace=BlendSpace.Axis Settings.Horizontal Axis,BlendSpace.Axis Settings.Vertical Axis,
 
 [EditorStartup]
-LastLevel=/Game/Maps/Menu/MainMenu_Map
+LastLevel=/Game/Maps/Map_01
 
 [DetailCategories]
 WorldSettings.PrecomputedVisibility=True
@@ -972,13 +972,45 @@ WB_ServerRow_C.Clipping=True
 WB_ServerRow_C.Navigation=True
 K2Node_FormatText.Arguments=True
 WB_ServerRow_C.Default=True
+WB_LobbyMenu_C.Default=True
+WB_LobbyMenu_C.Appearance=True
+WB_LobbyMenu_C.Designer=True
+WB_LobbyMenu_C.Input=True
+WB_LobbyMenu_C.Interaction=True
+WB_LobbyMenu_C.Performance=True
+WB_LobbyMenu_C.Layout=True
+WB_LobbyMenu_C.Behavior=True
+WB_LobbyMenu_C.Render Transform=True
+WB_LobbyMenu_C.Localization=True
+WB_LobbyMenu_C.Accessibility=True
+WB_LobbyMenu_C.Clipping=True
+WB_LobbyMenu_C.Navigation=True
+BP_MenuController_C.PlayerController=True
+BP_MenuController_C.Tick=True
+BP_MenuController_C.Cheat Manager=True
+BP_MenuController_C.MouseInterface=True
+BP_MenuController_C.Game=True
+BP_MenuController_C.WorldPartition=True
+BP_MenuController_C.Controller=True
+BP_MenuController_C.Replication=True
+BP_MenuController_C.Actor=True
+BP_MenuController_C.Input=True
+BP_MenuController_C.HLOD=True
+BP_MenuController_C.Events=True
+BP_Menu_GameMode_C.Tick=True
+BP_Menu_GameMode_C.Classes=True
+BP_Menu_GameMode_C.Game=True
+BP_Menu_GameMode_C.GameMode=True
+BP_Menu_GameMode_C.Events=True
 
 [AssetEditorSubsystem]
 CleanShutdown=True
 OpenAssetsAtExit=/Game/Framework/BP_SHooter_Gameinstance.BP_SHooter_Gameinstance
 OpenAssetsAtExit=/Game/Widgets/WB_MpMenu.WB_MpMenu
 OpenAssetsAtExit=/Game/Widgets/WB_MainMenu.WB_MainMenu
-OpenAssetsAtExit=/Game/Widgets/WB_ServerRow.WB_ServerRow
+OpenAssetsAtExit=/Game/Framework/BP_MenuController.BP_MenuController
+OpenAssetsAtExit=/Game/Widgets/WB_LobbyMenu.WB_LobbyMenu
+OpenAssetsAtExit=/Game/Framework/BP_Menu_GameMode.BP_Menu_GameMode
 
 [ContentBrowser]
 ContentBrowserDrawer.SourcesExpanded=True
@@ -998,7 +1030,7 @@ ContentBrowserDrawer.ActiveTypeFilters=
 ContentBrowserDrawer.EnabledTypeFilters=
 ContentBrowserDrawer.ActiveFrontendFilters=ShowRedirectors
 ContentBrowserDrawer.EnabledFrontendFilters=
-ContentBrowserDrawer.SelectedPaths=/Game/Maps/Menu
+ContentBrowserDrawer.SelectedPaths=/Game/Framework
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -1042,26 +1074,26 @@ ToolbarOpenBPClass.ThumbnailSize=2
 ToolbarOpenBPClass.CurrentViewType=0
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Maps/Menu/MainMenu_Map
-MRUItem1=/Game/Maps/Menu/LobbyMenu_Map
-MRUItem2=/Game/Widgets/WB_ServerRow
-MRUItem3=/Game/Widgets/WB_MainMenu
-MRUItem4=/Game/Widgets/WB_MpMenu
-MRUItem5=/Game/Framework/BP_SHooter_Gameinstance
-MRUItem6=/Game/Framework/BP_Shooter_PlayerController
-MRUItem7=/Game/SavedData/SG_PlayerProfile
-MRUItem8=/Game/SavedData/S_PlayerProfile
-MRUItem9=/Game/Framework/BP_SHooter_Gamemose
-MRUItem10=/Game/Framework/BP_ShooterMenuPawn
-MRUItem11=/Game/Framework/BP_ShooterMenuController
-MRUItem12=/Game/Framework/BP_ShooterMenu_GameMode
-MRUItem13=/Game/Weapons/Pistol/Mesh/SK_Pistol
-MRUItem14=/Game/Characters/BS_Movement_Quinn
-MRUItem15=/Game/Characters/Heroes/Mannequin/Animations/ABP_Mannequin_Base
-MRUItem16=/Game/Characters/ABP_Hero_Quinn
-MRUItem17=/Game/Characters/BP_Hero_Quinn
-MRUItem18=/Game/Characters/Heroes/Mannequin/Animations/AimOffsets/AO_MF_Pistol_Idle_ADS
-MRUItem19=/Game/Maps/Map_01
+MRUItem0=/Game/Framework/BP_Menu_GameMode
+MRUItem1=/Game/Framework/BP_MenuController
+MRUItem2=/Game/Widgets/WB_LobbyMenu
+MRUItem3=/Game/Widgets/WB_ServerRow
+MRUItem4=/Game/Widgets/WB_MainMenu
+MRUItem5=/Game/Widgets/WB_MpMenu
+MRUItem6=/Game/Framework/BP_SHooter_Gameinstance
+MRUItem7=/Game/Maps/Menu/MainMenu_Map
+MRUItem8=/Game/Maps/Menu/LobbyMenu_Map
+MRUItem9=/Game/Framework/BP_Shooter_PlayerController
+MRUItem10=/Game/SavedData/SG_PlayerProfile
+MRUItem11=/Game/SavedData/S_PlayerProfile
+MRUItem12=/Game/Framework/BP_SHooter_Gamemose
+MRUItem13=/Game/Framework/BP_ShooterMenuPawn
+MRUItem14=/Game/Framework/BP_ShooterMenuController
+MRUItem15=/Game/Framework/BP_ShooterMenu_GameMode
+MRUItem16=/Game/Weapons/Pistol/Mesh/SK_Pistol
+MRUItem17=/Game/Characters/BS_Movement_Quinn
+MRUItem18=/Game/Characters/Heroes/Mannequin/Animations/ABP_Mannequin_Base
+MRUItem19=/Game/Characters/ABP_Hero_Quinn
 
 [DetailPropertyExpansion]
 PreviewMeshCollection="\"Object.SkeletalMeshes\" "
@@ -1076,8 +1108,8 @@ EdGraphNode=
 Border="\"Object.Appearance.BrushColor\" "
 ContentWidget="\"Object.Appearance.BrushColor\" "
 PanelWidget="\"Object.Appearance.BrushColor\" "
-Widget=
-Visual=
+Widget="\"Object.Appearance.Font\" "
+Visual="\"Object.Appearance.Font\" "
 TextBlock="\"Object.Appearance.Font\" "
 TextLayoutWidget="\"Object.Appearance.Font\" "
 Button="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Normal.TintColor\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Hovered.TintColor\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.WidgetStyle.Pressed.TintColor\" "
@@ -1103,6 +1135,9 @@ EditableText="\"Object.Appearance.WidgetStyle.ColorAndOpacity\" "
 /Game/SavedData/SG_PlayerProfile.SG_PlayerProfile=0
 /Game/Widgets/WB_ServerRow.WB_ServerRow=0
 /Game/Widgets/WB_MpMenu.WB_MpMenu=0
+/Game/Framework/BP_MenuController.BP_MenuController=0
+/Game/Framework/BP_Menu_GameMode.BP_Menu_GameMode=0
+/Game/Widgets/WB_LobbyMenu.WB_LobbyMenu=0
 
 [/Script/PinnedCommandList.PinnedCommandListSettings]
 Contexts=(Name="AnimationEditor",Commands=)
