--- a/UE5_03/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/UE5_03/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -67,7 +67,7 @@ EnablePIEEnterAndExitSounds=False
 PlayInEditorSoundQualityLevel=0
 bUseNonRealtimeAudioDevice=False
 bPreferToStreamLevelsInPIE=False
-NewWindowPosition=(X=320,Y=160)
+NewWindowPosition=(X=-1296,Y=23)
 PIEAlwaysOnTop=False
 DisableStandaloneSound=False
 AdditionalLaunchParameters=
@@ -95,14 +95,14 @@ ServerDebugDrawingColorTint=(R=0.000000,G=0.000000,B=0.000000,A=1.000000)
 AdditionalServerLaunchParameters=
 ServerFixedFPS=0
 NetworkEmulationSettings=(bIsNetworkEmulationEnabled=False,EmulationTarget=Server,CurrentProfile="Custom",OutPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0),InPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0))
-LastSize=(X=0,Y=0)
+LastSize=(X=1280,Y=720)
 LastExecutedLaunchDevice=Windows@EMILKA
 LastExecutedLaunchName=EMILKA
 LastExecutedPIEPreviewDevice=
 DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
-MultipleInstancePositions=(X=320,Y=160)
-MultipleInstancePositions=(X=-908,Y=0)
+MultipleInstancePositions=(X=-1296,Y=23)
+MultipleInstancePositions=(X=-1920,Y=0)
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
 FlightCameraControlExperimentalNavigation=False
@@ -250,7 +250,7 @@ WmfMediaSettings=InputSettings.Bindings.AxisMappings.NewAxisMapping_0,InputSetti
 BlendSpace=BlendSpace.Axis Settings.Horizontal Axis,BlendSpace.Axis Settings.Vertical Axis,
 
 [EditorStartup]
-LastLevel=/Game/Maps/Map_01
+LastLevel=/Game/Maps/Menu/MainMenu_Map
 
 [DetailCategories]
 WorldSettings.PrecomputedVisibility=True
@@ -1002,15 +1002,14 @@ BP_Menu_GameMode_C.Classes=True
 BP_Menu_GameMode_C.Game=True
 BP_Menu_GameMode_C.GameMode=True
 BP_Menu_GameMode_C.Events=True
+K2Node_SwitchString.PinOptions=True
 
 [AssetEditorSubsystem]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/Framework/BP_SHooter_Gameinstance.BP_SHooter_Gameinstance
-OpenAssetsAtExit=/Game/Widgets/WB_MpMenu.WB_MpMenu
-OpenAssetsAtExit=/Game/Widgets/WB_MainMenu.WB_MainMenu
-OpenAssetsAtExit=/Game/Framework/BP_MenuController.BP_MenuController
-OpenAssetsAtExit=/Game/Widgets/WB_LobbyMenu.WB_LobbyMenu
 OpenAssetsAtExit=/Game/Framework/BP_Menu_GameMode.BP_Menu_GameMode
+OpenAssetsAtExit=/Game/Widgets/WB_LobbyMenu.WB_LobbyMenu
+OpenAssetsAtExit=/Game/Framework/BP_MenuController.BP_MenuController
+OpenAssetsAtExit=/Game/Framework/BP_SHooter_Gameinstance.BP_SHooter_Gameinstance
 
 [ContentBrowser]
 ContentBrowserDrawer.SourcesExpanded=True
@@ -1030,7 +1029,7 @@ ContentBrowserDrawer.ActiveTypeFilters=
 ContentBrowserDrawer.EnabledTypeFilters=
 ContentBrowserDrawer.ActiveFrontendFilters=ShowRedirectors
 ContentBrowserDrawer.EnabledFrontendFilters=
-ContentBrowserDrawer.SelectedPaths=/Game/Framework
+ContentBrowserDrawer.SelectedPaths=/Game/Maps/Menu
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -1074,14 +1073,14 @@ ToolbarOpenBPClass.ThumbnailSize=2
 ToolbarOpenBPClass.CurrentViewType=0
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Framework/BP_Menu_GameMode
-MRUItem1=/Game/Framework/BP_MenuController
-MRUItem2=/Game/Widgets/WB_LobbyMenu
-MRUItem3=/Game/Widgets/WB_ServerRow
-MRUItem4=/Game/Widgets/WB_MainMenu
-MRUItem5=/Game/Widgets/WB_MpMenu
-MRUItem6=/Game/Framework/BP_SHooter_Gameinstance
-MRUItem7=/Game/Maps/Menu/MainMenu_Map
+MRUItem0=/Game/Maps/Menu/MainMenu_Map
+MRUItem1=/Game/Framework/BP_SHooter_Gameinstance
+MRUItem2=/Game/Framework/BP_MenuController
+MRUItem3=/Game/Widgets/WB_LobbyMenu
+MRUItem4=/Game/Framework/BP_Menu_GameMode
+MRUItem5=/Game/Widgets/WB_ServerRow
+MRUItem6=/Game/Widgets/WB_MainMenu
+MRUItem7=/Game/Widgets/WB_MpMenu
 MRUItem8=/Game/Maps/Menu/LobbyMenu_Map
 MRUItem9=/Game/Framework/BP_Shooter_PlayerController
 MRUItem10=/Game/SavedData/SG_PlayerProfile
@@ -1114,6 +1113,8 @@ TextBlock="\"Object.Appearance.Font\" "
 TextLayoutWidget="\"Object.Appearance.Font\" "
 Button="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Normal.TintColor\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Hovered.TintColor\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.WidgetStyle.Pressed.TintColor\" "
 EditableText="\"Object.Appearance.WidgetStyle.ColorAndOpacity\" "
+K2Node_SwitchString="\"Object.PinOptions.PinNames\" "
+K2Node_Switch="\"Object.PinOptions.PinNames\" "
 
 [AssetEditorToolkitTabLocation]
 /Game/Characters/Heroes/Mannequin/Animations/Actions/AM_MM_Shotgun_Melee.AM_MM_Shotgun_Melee=1
@@ -1273,7 +1274,7 @@ bShowBookmarksForCurrentDocumentOnlyInTab=False
 GraphEditorQuickJumps=()
 
 [RootWindow]
-ScreenPosition=X=-1899.000 Y=0.000
+ScreenPosition=X=-1457.000 Y=4.000
 WindowSize=X=985.000 Y=1021.000
 InitiallyMaximized=True
 
@@ -2300,4 +2301,7 @@ bCompileDirectorOnEvaluate=False
 TrajectoryPathCap=250
 FrameNumberDisplayFormat=Seconds
 MovieRendererName=
+
+[MessageLog]
+LastLogListing=PIE
 
