--- a/UE5_03/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/UE5_03/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -95,7 +95,7 @@ ServerDebugDrawingColorTint=(R=0.000000,G=0.000000,B=0.000000,A=1.000000)
 AdditionalServerLaunchParameters=
 ServerFixedFPS=0
 NetworkEmulationSettings=(bIsNetworkEmulationEnabled=False,EmulationTarget=Server,CurrentProfile="Custom",OutPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0),InPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0))
-LastSize=(X=1280,Y=720)
+LastSize=(X=0,Y=0)
 LastExecutedLaunchDevice=Windows@EMILKA
 LastExecutedLaunchName=EMILKA
 LastExecutedPIEPreviewDevice=
@@ -130,8 +130,11 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 
 [MRU]
 MRUItem0=/Game/Maps/Menu/MainMenu_Map
-MRUItem1=/Game/Maps/Menu/LobbyMenu_Map
+MRUItem1=/Game/Maps/Menu/TravelMap
 MRUItem2=/Game/Maps/Map_01
+MRUItem3=/Game/Maps/Map_02
+MRUItem4=/Game/Maps/Menu/Map_02
+MRUItem5=/Game/Maps/Menu/LobbyMenu_Map
 
 [/Script/UnrealEd.PersonaOptions]
 bAutoAlignFloorToMesh=True
@@ -1003,13 +1006,101 @@ BP_Menu_GameMode_C.Game=True
 BP_Menu_GameMode_C.GameMode=True
 BP_Menu_GameMode_C.Events=True
 K2Node_SwitchString.PinOptions=True
+PlayerStart.TransformCommon=True
+PlayerStart.Object=True
+PlayerStart.Rendering=True
+PlayerStart.Replication=True
+PlayerStart.HLOD=True
+PlayerStart.Input=True
+PlayerStart.Actor=True
+BP_Menu_GameMode_C.Default=True
+EdGraphNode_Comment.GraphNodeDetail=True
+EdGraphNode_Comment.Comment=True
+CheckBox.Layout=True
+CheckBox.Appearance=True
+CheckBox.Style=True
+CheckBox.Accessibility=True
+CheckBox.Interaction=True
+CheckBox.Behavior=True
+CheckBox.Render Transform=True
+CheckBox.Performance=True
+CheckBox.Clipping=True
+CheckBox.Navigation=True
+CheckBox.Localization=True
+CheckBox.Events=True
+BP_MenuController_C.Default=True
+Blueprint.ClassOptions=True
+Blueprint.BlueprintOptions=True
+Blueprint.Interfaces=True
+Blueprint.Thumbnail=True
+BP_MenuController_C.Cooking=False
+BP_MenuController_C.DataLayers=True
+Texture2D.LevelOfDetail=True
+Texture2D.Compression=True
+Texture2D.Texture=True
+Texture2D.Adjustments=True
+Texture2D.File Path=True
+Texture2D.Compositing=True
+Image.Layout=True
+Image.Appearance=True
+Image.Accessibility=True
+Image.Behavior=True
+Image.Render Transform=True
+Image.Performance=True
+Image.Clipping=True
+Image.Navigation=True
+Image.Localization=True
+Image.Events=True
+WB_LoadScreen_C.Default=True
+WB_LoadScreen_C.Appearance=True
+WB_LoadScreen_C.Designer=True
+WB_LoadScreen_C.Input=True
+WB_LoadScreen_C.Interaction=True
+WB_LoadScreen_C.Performance=True
+WB_LoadScreen_C.Layout=True
+WB_LoadScreen_C.Behavior=True
+WB_LoadScreen_C.Render Transform=True
+WB_LoadScreen_C.Localization=True
+WB_LoadScreen_C.Accessibility=True
+WB_LoadScreen_C.Clipping=True
+WB_LoadScreen_C.Navigation=True
+Throbber.Layout=True
+Throbber.Appearance=True
+Throbber.Accessibility=True
+Throbber.Behavior=True
+Throbber.Render Transform=True
+Throbber.Performance=True
+Throbber.Clipping=True
+Throbber.Navigation=True
+Throbber.Localization=True
+K2Node_FunctionEntry.GraphNodeDetail=True
+K2Node_FunctionEntry.Graph=True
+K2Node_FunctionEntry.Inputs=True
+K2Node_FunctionEntry.Outputs=True
+StaticMeshActor.TransformCommon=True
+StaticMeshActor.StaticMesh=True
+StaticMeshActor.Materials=True
+StaticMeshActor.Physics=True
+StaticMeshActor.Collision=True
+StaticMeshActor.Lighting=True
+StaticMeshActor.Rendering=True
+StaticMeshActor.HLOD=True
+StaticMeshActor.Navigation=True
+StaticMeshActor.VirtualTexture=True
+StaticMeshActor.Tags=True
+StaticMeshActor.Cooking=True
+StaticMeshActor.Replication=True
+StaticMeshActor.Actor=True
+Generic.None=True
+S_LevelInfo.None=True
 
 [AssetEditorSubsystem]
 CleanShutdown=True
 OpenAssetsAtExit=/Game/Framework/BP_Menu_GameMode.BP_Menu_GameMode
 OpenAssetsAtExit=/Game/Widgets/WB_LobbyMenu.WB_LobbyMenu
+OpenAssetsAtExit=/Game/Framework/BP_SHooter_PlayerController.BP_SHooter_PlayerController
+OpenAssetsAtExit=/Game/Widgets/WB_LevelRowInfo.WB_LevelRowInfo
 OpenAssetsAtExit=/Game/Framework/BP_MenuController.BP_MenuController
-OpenAssetsAtExit=/Game/Framework/BP_SHooter_Gameinstance.BP_SHooter_Gameinstance
 
 [ContentBrowser]
 ContentBrowserDrawer.SourcesExpanded=True
@@ -1074,25 +1165,25 @@ ToolbarOpenBPClass.CurrentViewType=0
 
 [ContentBrowserRecent]
 MRUItem0=/Game/Maps/Menu/MainMenu_Map
-MRUItem1=/Game/Framework/BP_SHooter_Gameinstance
-MRUItem2=/Game/Framework/BP_MenuController
-MRUItem3=/Game/Widgets/WB_LobbyMenu
-MRUItem4=/Game/Framework/BP_Menu_GameMode
-MRUItem5=/Game/Widgets/WB_ServerRow
-MRUItem6=/Game/Widgets/WB_MainMenu
-MRUItem7=/Game/Widgets/WB_MpMenu
-MRUItem8=/Game/Maps/Menu/LobbyMenu_Map
+MRUItem1=/Game/Maps/Menu/TravelMap
+MRUItem2=/Game/Widgets/WB_LevelRowInfo
+MRUItem3=/Game/Maps/LevelInfo_Table
+MRUItem4=/Game/Maps/S_LevelInfo
+MRUItem5=/Game/Maps/Map_01
+MRUItem6=/Game/Maps/Map_02
+MRUItem7=/Game/Framework/BP_MenuController
+MRUItem8=/Game/Widgets/WB_LoadScreen
 MRUItem9=/Game/Framework/BP_Shooter_PlayerController
-MRUItem10=/Game/SavedData/SG_PlayerProfile
-MRUItem11=/Game/SavedData/S_PlayerProfile
-MRUItem12=/Game/Framework/BP_SHooter_Gamemose
-MRUItem13=/Game/Framework/BP_ShooterMenuPawn
-MRUItem14=/Game/Framework/BP_ShooterMenuController
-MRUItem15=/Game/Framework/BP_ShooterMenu_GameMode
-MRUItem16=/Game/Weapons/Pistol/Mesh/SK_Pistol
-MRUItem17=/Game/Characters/BS_Movement_Quinn
-MRUItem18=/Game/Characters/Heroes/Mannequin/Animations/ABP_Mannequin_Base
-MRUItem19=/Game/Characters/ABP_Hero_Quinn
+MRUItem10=/Game/Widgets/WB_LobbyMenu
+MRUItem11=/Game/Framework/BP_Menu_GameMode
+MRUItem12=/Game/Textures/UI/T_Loadscreen
+MRUItem13=/Game/Maps/Menu/LobbyMenu_Map
+MRUItem14=/Game/Framework/BP_SHooter_Gameinstance
+MRUItem15=/Game/Widgets/WB_ServerRow
+MRUItem16=/Game/Widgets/WB_MainMenu
+MRUItem17=/Game/Widgets/WB_MpMenu
+MRUItem18=/Game/SavedData/SG_PlayerProfile
+MRUItem19=/Game/SavedData/S_PlayerProfile
 
 [DetailPropertyExpansion]
 PreviewMeshCollection="\"Object.SkeletalMeshes\" "
@@ -1104,17 +1195,25 @@ AnimGraphNode_BlendListBase="\"Object.Settings.Node.LayerSetup\" \"Object.Settin
 AnimGraphNode_Base="\"Object.Settings.Node.LayerSetup\" \"Object.Settings.Node.LayerSetup.LayerSetup[0]\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters.BranchFilters[0]\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters.BranchFilters[1]\" \"Object.Settings.Node.LayerSetup.LayerSetup[0].BranchFilters.BranchFilters[2]\" "
 K2Node=
 EdGraphNode=
-Border="\"Object.Appearance.BrushColor\" "
-ContentWidget="\"Object.Appearance.BrushColor\" "
-PanelWidget="\"Object.Appearance.BrushColor\" "
-Widget="\"Object.Appearance.Font\" "
-Visual="\"Object.Appearance.Font\" "
-TextBlock="\"Object.Appearance.Font\" "
-TextLayoutWidget="\"Object.Appearance.Font\" "
-Button="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Normal.TintColor\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Hovered.TintColor\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.WidgetStyle.Pressed.TintColor\" "
+Border="\"Object.Appearance.BrushColor\" \"Object.Layout.Slot\" "
+ContentWidget="\"Object.Appearance.BrushColor\" \"Object.Layout.Slot\" "
+PanelWidget="\"Object.Appearance.BrushColor\" \"Object.Layout.Slot\" "
+Widget="\"Object.Appearance.BrushColor\" \"Object.Layout.Slot\" "
+Visual="\"Object.Appearance.BrushColor\" \"Object.Layout.Slot\" "
+TextBlock="\"Object.Appearance.Font\" \"Object.Layout.Slot\" "
+TextLayoutWidget="\"Object.Appearance.Font\" \"Object.Layout.Slot\" "
+Button="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Normal.TintColor\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Hovered.TintColor\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.WidgetStyle.Pressed.TintColor\" \"Object.Layout.Slot\" "
 EditableText="\"Object.Appearance.WidgetStyle.ColorAndOpacity\" "
 K2Node_SwitchString="\"Object.PinOptions.PinNames\" "
 K2Node_Switch="\"Object.PinOptions.PinNames\" "
+CheckBox="\"Object.Style.WidgetStyle\" \"Object.Layout.Slot\" "
+VerticalBox="\"Object.Layout.Slot\" "
+Image="\"Object.Appearance.Brush\" \"Object.Layout.Slot\" "
+Throbber="\"Object.Layout.Slot\" "
+WB_LoadScreen_C="\"Object.Layout.Slot\" "
+UserWidget=
+WB_LobbyMenu_C=
+ScrollBox="\"Object.Layout.Slot\" "
 
 [AssetEditorToolkitTabLocation]
 /Game/Characters/Heroes/Mannequin/Animations/Actions/AM_MM_Shotgun_Melee.AM_MM_Shotgun_Melee=1
@@ -1139,6 +1238,11 @@ K2Node_Switch="\"Object.PinOptions.PinNames\" "
 /Game/Framework/BP_MenuController.BP_MenuController=0
 /Game/Framework/BP_Menu_GameMode.BP_Menu_GameMode=0
 /Game/Widgets/WB_LobbyMenu.WB_LobbyMenu=0
+/Game/Textures/UI/T_Loadscreen.T_Loadscreen=1
+/Game/Maps/S_LevelInfo.S_LevelInfo=0
+/Game/Maps/LevelInfo_Table.LevelInfo_Table=0
+/Game/Widgets/WB_LoadScreen.WB_LoadScreen=0
+/Game/Widgets/WB_LevelRowInfo.WB_LevelRowInfo=0
 
 [/Script/PinnedCommandList.PinnedCommandListSettings]
 Contexts=(Name="AnimationEditor",Commands=)
@@ -2204,6 +2308,8 @@ MovieSceneCapture.TimeStamp=2022.09.12-14.20.55
 MovieSceneCapture.LastCompileMethod=Unknown
 PerfCounters.TimeStamp=2022.09.12-14.20.55
 PerfCounters.LastCompileMethod=Unknown
+DataTableEditor.TimeStamp=2022.09.12-14.20.50
+DataTableEditor.LastCompileMethod=Unknown
 
 [Python]
 LastDirectory=
@@ -2228,7 +2334,7 @@ bDeleteSourceFilesWithAssets=False
 
 [WidgetTemplatesExpanded]
 Editor=False
-Input=True
+Input=False
 Lists=False
 Misc=False
 Optimization=False
@@ -2304,4 +2410,13 @@ MovieRendererName=
 
 [MessageLog]
 LastLogListing=PIE
+
+[PlacementMode]
+RecentlyPlaced=/Game/StarterContent/Materials/M_Ground_Gravel.M_Ground_Gravel;
+RecentlyPlaced=/Game/StarterContent/Materials/M_Ground_Grass.M_Ground_Grass;
+RecentlyPlaced=/Script/Engine.PlayerStart;/Engine/Transient.ActorFactoryPlayerStart_0
+
+[DetailCategoriesAdvanced]
+GameMapsSettings.DefaultMaps=True
+TextBlock.Appearance=True
 
