--- a/UE5_03/Config/DefaultEngine.ini
+++ b/UE5_03/Config/DefaultEngine.ini
@@ -7,6 +7,7 @@ GameDefaultMap=/Game/Maps/Map_01.Map_01
 EditorStartupMap=/Game/Maps/Map_01.Map_01
 GlobalDefaultGameMode=/Game/Framework/BP_SHooter_Gamemose.BP_SHooter_Gamemose_C
 GameInstanceClass=/Game/Framework/BP_SHooter_Gameinstance.BP_SHooter_Gameinstance_C
+TransitionMap=/Game/Maps/Menu/TravelMap.TravelMap
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
