--- a/UE5_03/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/UE5_03/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -79,7 +79,7 @@ bLaunchSeparateServer=False
 PlayNetMode=PIE_Standalone
 RunUnderOneProcess=True
 PlayNetDedicated=False
-PlayNumberOfClients=2
+PlayNumberOfClients=1
 ServerPort=17777
 ClientWindowWidth=640
 AutoConnectToServer=True
@@ -95,7 +95,7 @@ ServerDebugDrawingColorTint=(R=0.000000,G=0.000000,B=0.000000,A=1.000000)
 AdditionalServerLaunchParameters=
 ServerFixedFPS=0
 NetworkEmulationSettings=(bIsNetworkEmulationEnabled=False,EmulationTarget=Server,CurrentProfile="Custom",OutPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0),InPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0))
-LastSize=(X=0,Y=0)
+LastSize=(X=1280,Y=720)
 LastExecutedLaunchDevice=Windows@EMILKA
 LastExecutedLaunchName=EMILKA
 LastExecutedPIEPreviewDevice=
@@ -103,7 +103,6 @@ DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
 MultipleInstancePositions=(X=-1296,Y=23)
 MultipleInstancePositions=(X=121,Y=216)
-LastExecutedPlayModeType=PlayMode_InNewProcess
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
 FlightCameraControlExperimentalNavigation=False
@@ -1159,6 +1158,12 @@ AnimGraphNode_Fabrik.Solver=True
 AnimGraphNode_Fabrik.Tag=True
 AnimGraphNode_Fabrik.Performance=True
 AnimGraphNode_Fabrik.Alpha=True
+AnimGraphNode_Base.Functions=True
+AnimGraphNode_Base.Tag=True
+AnimGraphNode_ApplyAdditive.Alpha=True
+AnimGraphNode_ApplyAdditive.Functions=True
+AnimGraphNode_ApplyAdditive.Performance=True
+AnimGraphNode_ApplyAdditive.Tag=True
 
 [AssetEditorSubsystem]
 CleanShutdown=True
