--- a/UE5_03/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/UE5_03/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -1174,6 +1174,7 @@ S_WeaponInfo.None=True
 [AssetEditorSubsystem]
 CleanShutdown=False
 OpenAssetsAtExit=/Game/Characters/BP_Hero_Quinn.BP_Hero_Quinn
+OpenAssetsAtExit=/Game/Weapons/WeaponInfo_Table.WeaponInfo_Table
 
 [ContentBrowser]
 ContentBrowserDrawer.SourcesExpanded=True
@@ -1237,10 +1238,10 @@ ToolbarOpenBPClass.ThumbnailSize=2
 ToolbarOpenBPClass.CurrentViewType=0
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Characters/BP_Hero_Quinn
-MRUItem1=/Game/Characters/ABP_Hero_Quinn
-MRUItem2=/Game/Weapons/Pistol/Mesh/SK_Pistol
-MRUItem3=/Game/Weapons/WeaponInfo_Table
+MRUItem0=/Game/Weapons/WeaponInfo_Table
+MRUItem1=/Game/Characters/BP_Hero_Quinn
+MRUItem2=/Game/Characters/ABP_Hero_Quinn
+MRUItem3=/Game/Weapons/Pistol/Mesh/SK_Pistol
 MRUItem4=/Game/Weapons/S_WeaponInfo
 MRUItem5=/Game/Characters/Heroes/Mannequin/Animations/Actions/AM_MM_Dash_Forward
 MRUItem6=/Game/Characters/E_CharMoveDirection
