#12 (całość, naprawienie błędów)

--- a/UE5_03/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/UE5_03/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -740,7 +740,7 @@ AnimGraphNode_BlendSpacePlayer.Settings=True
 PropertyWrapper.Variable=True
 PropertyWrapper.DefaultValueCategory=True
 K2Node_VariableGet.Variable=True
-K2Node_VariableGet.DefaultValueCategory=False
+K2Node_VariableGet.DefaultValueCategory=True
 K2Node_VariableSet.Variable=True
 K2Node_VariableSet.DefaultValueCategory=True
 BP_SHooter_Gamemose_C.Tick=True
@@ -2512,7 +2512,7 @@ FrameNumberDisplayFormat=Seconds
 MovieRendererName=
 
 [MessageLog]
-LastLogListing=PIE
+LastLogListing=BlueprintLog
 
 [PlacementMode]
 RecentlyPlaced=/Script/Engine.PlayerStart;/Engine/Transient.ActorFactoryPlayerStart_0
