--- a/UE5_03/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/UE5_03/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -79,7 +79,7 @@ bLaunchSeparateServer=False
 PlayNetMode=PIE_Standalone
 RunUnderOneProcess=True
 PlayNetDedicated=False
-PlayNumberOfClients=2
+PlayNumberOfClients=3
 ServerPort=17777
 ClientWindowWidth=640
 AutoConnectToServer=True
@@ -258,23 +258,33 @@ MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Ba
 MaterialInstanceConstant=
 PropertyWrapper=PropertyWrapper.DefaultValueCategory.PlayerProfile,K2Node_VariableSet.DefaultValueCategory.PlayerProfile,K2Node_VariableGet.DefaultValueCategory.PlayerProfile,
 SG_PlayerProfile_C=PropertyWrapper.DefaultValueCategory.PlayerProfile,K2Node_VariableSet.DefaultValueCategory.PlayerProfile,K2Node_VariableGet.DefaultValueCategory.PlayerProfile,
-BP_MenuController_C=PropertyWrapper.DefaultValueCategory.PlayerProfile,K2Node_VariableSet.DefaultValueCategory.PlayerProfile,
+BP_MenuController_C=PropertyWrapper.DefaultValueCategory.PlayerProfile,K2Node_VariableSet.DefaultValueCategory.PlayerProfile,K2Node_VariableGet.DefaultValueCategory.PlayerProfile,
 K2Node_VariableGet=PropertyWrapper.DefaultValueCategory.PlayerProfile,K2Node_VariableSet.DefaultValueCategory.PlayerProfile,K2Node_VariableGet.DefaultValueCategory.PlayerProfile,
 BP_LobbyCharacter_C=PropertyWrapper.DefaultValueCategory.PlayerProfile,
 ChildActorComponent=
-WB_CharacterMenu_C=PropertyWrapper.DefaultValueCategory.PlayerProfile,K2Node_VariableSet.DefaultValueCategory.PlayerProfile,
+WB_CharacterMenu_C=PropertyWrapper.DefaultValueCategory.PlayerProfile,K2Node_VariableSet.DefaultValueCategory.PlayerProfile,K2Node_VariableGet.DefaultValueCategory.PlayerProfile,
 Button=PropertyWrapper.DefaultValueCategory.PlayerProfile,
-K2Node_VariableSet=PropertyWrapper.DefaultValueCategory.PlayerProfile,K2Node_VariableSet.DefaultValueCategory.PlayerProfile,
-K2Node_Variable=PropertyWrapper.DefaultValueCategory.PlayerProfile,K2Node_VariableSet.DefaultValueCategory.PlayerProfile,
-BP_Menu_GameMode_C=PropertyWrapper.DefaultValueCategory.PlayerProfile,K2Node_VariableSet.DefaultValueCategory.PlayerProfile,
-K2Node=PropertyWrapper.DefaultValueCategory.PlayerProfile,K2Node_VariableSet.DefaultValueCategory.PlayerProfile,
+K2Node_VariableSet=PropertyWrapper.DefaultValueCategory.PlayerProfile,K2Node_VariableSet.DefaultValueCategory.PlayerProfile,K2Node_VariableGet.DefaultValueCategory.PlayerProfile,
+K2Node_Variable=PropertyWrapper.DefaultValueCategory.PlayerProfile,K2Node_VariableSet.DefaultValueCategory.PlayerProfile,K2Node_VariableGet.DefaultValueCategory.PlayerProfile,
+BP_Menu_GameMode_C=PropertyWrapper.DefaultValueCategory.PlayerProfile,K2Node_VariableSet.DefaultValueCategory.PlayerProfile,K2Node_VariableGet.DefaultValueCategory.PlayerProfile,
+K2Node=PropertyWrapper.DefaultValueCategory.PlayerProfile,K2Node_VariableSet.DefaultValueCategory.PlayerProfile,K2Node_VariableGet.DefaultValueCategory.PlayerProfile,
 WB_LobbyMenu_C=PropertyWrapper.DefaultValueCategory.PlayerProfile,K2Node_VariableSet.DefaultValueCategory.PlayerProfile,
 K2Node_FunctionResult=PropertyWrapper.DefaultValueCategory.PlayerProfile,K2Node_VariableSet.DefaultValueCategory.PlayerProfile,K2Node_VariableGet.DefaultValueCategory.PlayerProfile,
-BP_SHooter_Gameinstance_C=PropertyWrapper.DefaultValueCategory.PlayerProfile,K2Node_VariableSet.DefaultValueCategory.PlayerProfile,
+BP_SHooter_Gameinstance_C=
 K2Node_CustomEvent=
 BP_SHooter_PlayerController_C=PropertyWrapper.DefaultValueCategory.PlayerProfile,K2Node_VariableSet.DefaultValueCategory.PlayerProfile,K2Node_VariableGet.DefaultValueCategory.PlayerProfile,
 Controller=PropertyWrapper.DefaultValueCategory.PlayerProfile,K2Node_VariableSet.DefaultValueCategory.PlayerProfile,K2Node_VariableGet.DefaultValueCategory.PlayerProfile,
 BP_Shooter_Playerstate_C=PropertyWrapper.DefaultValueCategory.PlayerProfile,K2Node_VariableSet.DefaultValueCategory.PlayerProfile,K2Node_VariableGet.DefaultValueCategory.PlayerProfile,
+BP_LobbyPlayerSpot_C=PropertyWrapper.DefaultValueCategory.PlayerProfile,K2Node_VariableSet.DefaultValueCategory.PlayerProfile,K2Node_VariableGet.DefaultValueCategory.PlayerProfile,
+EdGraph=PropertyWrapper.DefaultValueCategory.PlayerProfile,K2Node_VariableSet.DefaultValueCategory.PlayerProfile,K2Node_VariableGet.DefaultValueCategory.PlayerProfile,
+BP_Hero_Quinn_Blue_C=
+BP_Hero_Quinn_Green_C=
+BP_Hero_Quinn_Purple_C=
+BP_Hero_Quinn_Red_C=
+BP_Hero_Base_C=PropertyWrapper.DefaultValueCategory.PlayerProfile,K2Node_VariableSet.DefaultValueCategory.PlayerProfile,K2Node_VariableGet.DefaultValueCategory.PlayerProfile,
+BP_SHooter_Gamemode_C=PropertyWrapper.DefaultValueCategory.PlayerProfile,K2Node_VariableSet.DefaultValueCategory.PlayerProfile,K2Node_VariableGet.DefaultValueCategory.PlayerProfile,
+SpawnDefaultPawnFor_5=PropertyWrapper.DefaultValueCategory.PlayerProfile,K2Node_VariableSet.DefaultValueCategory.PlayerProfile,K2Node_VariableGet.DefaultValueCategory.PlayerProfile,
+SpawnDefaultPawnFor=PropertyWrapper.DefaultValueCategory.PlayerProfile,K2Node_VariableSet.DefaultValueCategory.PlayerProfile,K2Node_VariableGet.DefaultValueCategory.PlayerProfile,
 
 [EditorStartup]
 LastLevel=/Game/Maps/Menu/MainMenu_Map
@@ -1501,13 +1511,64 @@ WB_CharacterMenu_C.Localization=True
 WB_CharacterMenu_C.Accessibility=True
 WB_CharacterMenu_C.Clipping=True
 WB_CharacterMenu_C.Navigation=True
+ProgressBar.Layout=True
+ProgressBar.Style=True
+ProgressBar.Progress=True
+ProgressBar.Accessibility=True
+ProgressBar.Appearance=True
+ProgressBar.Behavior=True
+ProgressBar.Render Transform=True
+ProgressBar.Performance=True
+ProgressBar.Clipping=True
+ProgressBar.Navigation=True
+ProgressBar.Localization=True
+BP_Hero_Quinn_Blue_C.TransformCommon=True
+BP_Hero_Quinn_Blue_C.Animation=True
+BP_Hero_Quinn_Blue_C.Mesh=True
+BP_Hero_Quinn_Blue_C.ComponentTick=True
+BP_Hero_Quinn_Blue_C.Clothing=True
+BP_Hero_Quinn_Blue_C.MasterPoseComponent=True
+BP_Hero_Quinn_Blue_C.Physics=True
+BP_Hero_Quinn_Blue_C.AnimationRig=True
+BP_Hero_Quinn_Blue_C.Lighting=True
+BP_Hero_Quinn_Blue_C.Deformer=True
+BP_Hero_Quinn_Blue_C.SkinWeights=True
+BP_Hero_Quinn_Blue_C.Navigation=True
+BP_Hero_Quinn_Blue_C.VirtualTexture=True
+BP_Hero_Quinn_Blue_C.Tags=True
+BP_Hero_Quinn_Blue_C.ComponentReplication=True
+BP_Hero_Quinn_Blue_C.Activation=True
+BP_Hero_Quinn_Blue_C.Variable=True
+BP_Hero_Quinn_Blue_C.Cooking=True
+BP_Hero_Quinn_Blue_C.Character Movement (General Settings)=True
+BP_Hero_Quinn_Blue_C.Character Movement: Walking=True
+BP_Hero_Quinn_Blue_C.Character Movement: Jumping / Falling=True
+BP_Hero_Quinn_Blue_C.Character Movement (Networking)=True
+BP_Hero_Quinn_Blue_C.Character Movement: Swimming=True
+BP_Hero_Quinn_Blue_C.Character Movement: Flying=True
+BP_Hero_Quinn_Blue_C.Character Movement: Custom Movement=True
+BP_Hero_Quinn_Blue_C.Character Movement (Rotation Settings)=True
+BP_Hero_Quinn_Blue_C.Character Movement: Physics Interaction=True
+BP_Hero_Quinn_Blue_C.Character Movement=True
+BP_Hero_Quinn_Blue_C.Character Movement: Avoidance=True
+BP_Hero_Quinn_Blue_C.RootMotion=True
+BP_Hero_Quinn_Blue_C.Character Movement: NavMesh Movement=True
+BP_Hero_Quinn_Blue_C.NavMovement=True
+BP_Hero_Quinn_Blue_C.Velocity=True
+BP_Hero_Quinn_Blue_C.PlanarMovement=True
+BP_Hero_Quinn_Blue_C.MovementComponent=True
+BP_Hero_Quinn_Blue_C.Shape=True
+BP_Hero_Quinn_Blue_C.Materials=True
+K2Node_CallParentFunction.Graph=True
 
 [AssetEditorSubsystem]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/Gameplay/Lobby/BP_LobbyCharacter.BP_LobbyCharacter
+OpenAssetsAtExit=/Game/Framework/BP_SHooter_Gameinstance.BP_SHooter_Gameinstance
 OpenAssetsAtExit=/Game/Framework/BP_SHooter_Gamemode.BP_SHooter_Gamemode
+OpenAssetsAtExit=/Game/Characters/BP_Hero_Base.BP_Hero_Base
+OpenAssetsAtExit=/Game/Widgets/WB_LobbyMenu.WB_LobbyMenu
 OpenAssetsAtExit=/Game/Framework/BP_MenuController.BP_MenuController
-OpenAssetsAtExit=/Game/Framework/BP_SHooter_PlayerController.BP_SHooter_PlayerController
+OpenAssetsAtExit=/Game/Gameplay/Lobby/BP_LobbyCharacter.BP_LobbyCharacter
 
 [ContentBrowser]
 ContentBrowserDrawer.SourcesExpanded=True
@@ -1527,7 +1588,7 @@ ContentBrowserDrawer.ActiveTypeFilters=
 ContentBrowserDrawer.EnabledTypeFilters=
 ContentBrowserDrawer.ActiveFrontendFilters=ShowRedirectors
 ContentBrowserDrawer.EnabledFrontendFilters=
-ContentBrowserDrawer.SelectedPaths=/Game/Widgets
+ContentBrowserDrawer.SelectedPaths=/Game/Maps/Menu
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -1571,25 +1632,25 @@ ToolbarOpenBPClass.ThumbnailSize=2
 ToolbarOpenBPClass.CurrentViewType=0
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Framework/BP_SHooter_Gamemode
-MRUItem1=/Game/Framework/BP_SHooter_PlayerController
-MRUItem2=/Game/Framework/BP_MenuController
-MRUItem3=/Game/SavedData/SG_PlayerProfile
-MRUItem4=/Game/SavedData/S_PlayerProfile
-MRUItem5=/Game/Maps/Menu/MainMenu_Map
-MRUItem6=/Game/Widgets/WB_LobbyMenu
-MRUItem7=/Game/Framework/BP_SHooter_Gameinstance
-MRUItem8=/Game/Characters/CharacterInfo_Table
-MRUItem9=/Game/Widgets/WB_CharacterMenu
-MRUItem10=/Game/Gameplay/Lobby/BP_CameraViewTarget
-MRUItem11=/Game/Framework/BP_Menu_GameMode
-MRUItem12=/Game/Gameplay/Lobby/BP_LobbyCharacter
-MRUItem13=/Game/Characters/S_CharacterInfo
-MRUItem14=/Game/Characters/BP_Hero_Quinn_Red
-MRUItem15=/Game/Characters/BP_Hero_Quinn_Purple
-MRUItem16=/Game/Characters/BP_Hero_Quinn_Green
-MRUItem17=/Game/Characters/BP_Hero_Quinn_Blue
-MRUItem18=/Game/Characters/BP_Hero_Base
+MRUItem0=/Game/Gameplay/Lobby/BP_LobbyCharacter
+MRUItem1=/Game/Framework/BP_MenuController
+MRUItem2=/Game/Widgets/WB_LobbyMenu
+MRUItem3=/Game/Framework/BP_SHooter_Gameinstance
+MRUItem4=/Game/Framework/BP_SHooter_Gamemode
+MRUItem5=/Game/Characters/BP_Hero_Base
+MRUItem6=/Game/Characters/BP_Hero_Quinn_Blue
+MRUItem7=/Game/Characters/BP_Hero_Quinn_Green
+MRUItem8=/Game/Characters/BP_Hero_Quinn_Purple
+MRUItem9=/Game/Characters/BP_Hero_Quinn_Red
+MRUItem10=/Game/Maps/Menu/MainMenu_Map
+MRUItem11=/Game/Widgets/WB_CharacterMenu
+MRUItem12=/Game/Characters/S_CharacterInfo
+MRUItem13=/Game/Characters/CharacterInfo_Table
+MRUItem14=/Game/Framework/BP_Menu_GameMode
+MRUItem15=/Game/Framework/BP_SHooter_PlayerController
+MRUItem16=/Game/SavedData/SG_PlayerProfile
+MRUItem17=/Game/SavedData/S_PlayerProfile
+MRUItem18=/Game/Gameplay/Lobby/BP_CameraViewTarget
 MRUItem19=/Game/Characters/Heroes/Mannequin/Meshes/SKM_Quinn_Red
 
 [DetailPropertyExpansion]
@@ -1604,9 +1665,9 @@ K2Node=
 EdGraphNode=
 Border="\"Object.Appearance.BrushColor\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 ContentWidget="\"Object.Appearance.BrushColor\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-PanelWidget="\"Object.Appearance.BrushColor\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-Widget=
-Visual=
+PanelWidget="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+Widget="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+Visual="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 TextBlock="\"Object.Appearance.Font\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 TextLayoutWidget="\"Object.Appearance.Font\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 Button="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
@@ -1614,12 +1675,12 @@ EditableText="\"Object.Appearance.WidgetStyle.ColorAndOpacity\" "
 K2Node_SwitchString="\"Object.PinOptions.PinNames\" "
 K2Node_Switch="\"Object.PinOptions.PinNames\" "
 CheckBox="\"Object.Style.WidgetStyle\" \"Object.Layout.Slot\" "
-VerticalBox="\"Object.Layout.Slot\" "
+VerticalBox="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 Image="\"Object.Appearance.Brush\" \"Object.Layout.Slot\" "
 Throbber="\"Object.Layout.Slot\" "
 WB_LoadScreen_C="\"Object.Layout.Slot\" "
-UserWidget=
-WB_LobbyMenu_C="\"Object.Layout.Slot\" "
+UserWidget="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+WB_LobbyMenu_C="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 ScrollBox="\"Object.Layout.Slot\" "
 Spacer="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 WB_PauseMenu_C="\"Object.Layout.Slot\" "
@@ -1636,6 +1697,8 @@ ParticleModule="\"Object.Target.Target\" \"Object.Target.Target.Distribution\" \
 SG_PlayerProfile_C="\"Object.PlayerProfile\" "
 SaveGame="\"Object.PlayerProfile\" "
 WB_CharacterMenu_C=
+ProgressBar="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+HorizontalBox="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 
 [AssetEditorToolkitTabLocation]
 /Game/Characters/Heroes/Mannequin/Animations/Actions/AM_MM_Shotgun_Melee.AM_MM_Shotgun_Melee=1
